2013-03-25  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-elf32.sh: Build GDB.
	* build-linux.sh: Ensure we have the right tool chain on the path.
	* build-uclibc.sh: Tidy up commenting.
	* dejagnu/baseboards/arc-linux-generic.exp: Set up sysroot command
	file.
	* dejagnu/ftp-extra.exp (make_relative): Correct typo for prefix.
	(ftp_download): Silently ignore long remote file names.
	* dejagnu/telnet-extra.exp (telnet_close): Correct logic.
	(telnet_exec): Tidy up details of proc.
	(telnet_spawn_open): New proc.
	(telnet_spawn): Rewrite logic of proc.
	* run-uclibc-tests.sh (ARC_GDB_COMMFILE): Create command file for
	GDB tests.

2013-03-18  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Replace "4.8" by "mainline" throughout.
	* build-elf32.sh: Likewise.
	* build-uclibc.sh: Likewise.
	* run-elf32-tests.sh: Likewise.
	* run-uclibc-tests.sh: Likewise.

2013-03-18  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-all.sh: Add --big-endian to help.

2013-03-15  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: Allow a defconfig based uClibc build
	Do a distclean and also increase the verbosity

2013-03-15  Vineet Gupta <vgupta@synopsys.com>

	* build-uclibc.sh: No need to copy Linux sources

2013-03-04  Simon Cook  <simon.cook@embecosm.com>

	* build-elf32.sh: Add support for building big endian ELF tool chain.
	* build-uclibc.sh: Set build_dir based on endianness of tools.
	* run-elf32-tests.sh: Set test directories based on endianness.
	* run-uclibc-tests.sh: Likewise.

2013-02-27  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* build-uclibc.sh: Add ARC_LEGACY_PTRACE_ABI defintion when
	building gdbserver.

2013-02-26  Jeremy Bennett <jeremy.bennett@embecosm.com>

	* arc-versions.sh: Optionally do a fetch first, to deal with new
	branches.

2013-02-25  Simon Cook  <simon.cook@embecosm.com>

	* arc-versions.sh: Updated binutils, gcc, gdb and newlib branch
	references

2013-02-21  Jeremy Bennett <jeremy.bennett@embecosm.com>
